--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   background: white;
-  overflow-x: hidden;
+  overflow: hidden;
   transition: 5s;
   -webkit-transition: all 5s;
   width: 100vw;
