--- a/src/App.css
+++ b/src/App.css
@@ -388,5 +388,67 @@ section img {
   width: 60vw;
   margin: 50px auto;
   color: #888;
+}
 
+.apple-tv-container {
+  height: 100vh;
+  width: 100vw;
+  background-image: url(/src/assets/appletv.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 120%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  text-align: center;
+  margin: 10px 0;
+}
+
+.apple-tv-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  width: 100vw;
+  height: 130vh;
+}
+
+.apple-tv-content h2 {
+  margin-top: -20px;
+  margin-left: 10%;
+  font-size: 5rem;
+}
+
+.watch-now {
+  color: #111;
+  background-color: white;
+  padding: 25px 40px;
+  border-radius: 50px;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-left: 10%;
+  margin-top: 50px;
+  border: none;
+
+}
+
+.fitness-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: center;
+  margin-left: 50px;
+  margin-top: -100px;
+
+}
+
+.fitness-content h4 {
+  color: #444;
+  font-size: 1.1rem;
+}
+
+.button-section2 {
+  margin: 20px 0;
+  font-size: 1.2rem;
 }
